--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -44,6 +44,7 @@ grouped in the following categories:
 * <<exported-fields-http>>
 * <<exported-fields-ibmmq>>
 * <<exported-fields-iis>>
+* <<exported-fields-intel_power_gadget>>
 * <<exported-fields-istio>>
 * <<exported-fields-jolokia>>
 * <<exported-fields-jolokia-autodiscover>>
@@ -21174,6 +21175,66 @@ type: object
 +
 --
 website
+
+
+type: object
+
+--
+
+[[exported-fields-intel_power_gadget]]
+== intel_power_gadget fields
+
+intel_power_gadget module
+
+
+
+[float]
+=== cpu
+
+
+
+
+*`cpu.package`*::
++
+--
+Number of Intel processor package on this system
+
+
+type: integer
+
+--
+
+*`cpu.sample`*::
++
+--
+Intel processor packages on this system
+
+
+type: object
+
+--
+
+[float]
+=== cpu
+
+intel_power_gadget
+
+
+
+*`cpu.cpu.package`*::
++
+--
+Number of Intel processor package on this system
+
+
+type: integer
+
+--
+
+*`cpu.cpu.sample`*::
++
+--
+Intel processor packages on this system
 
 
 type: object
